@@ -1,6 +1,6 @@
 [buildout]
 extends =
-    https://raw.githubusercontent.com/collective/buildout.plonetest/master/test-4.3.x.cfg
+    https://raw.github.com/collective/buildout.plonetest/master/test-5.x.cfg
 
 package-name = collective.pwexpiry
 package-extras = [test]
