@@ -4,7 +4,8 @@ HISTORY of collective.pwexpiry
 0.11 (unreleased)
 -----------------
 
-- Nothing changed yet.
+- Include the ability to whitelist userids so they would not expire nor be locked
+  [frapell]
 
 
 0.10 (2017-02-21)
